[package]
name = "rusty-webhook"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "*"}
serde = {version = "*", features = ["derive"]}

surf = "2.3.1"
async-trait = "0.1.53"
tokio = {version = "1.14.1", features = ["full"]}
